2006-10-07  Tim-Philipp Müller  <tim at centricular dot net>

	* src/base64.c: (gnet_base64_encode), (gnet_base64_decode):
	  Add guards for NULL input. A 0-length input to gnet_base64_encode()
	  should return an empty string and not NULL. In the case of
	  gnet_base64_decode(), use strlen(src) for all non-positive values
	  of srclen and not just 0, since glib usually uses -1 for this
	  (0-sized input should really just have returned a 0-sized output
	  buffer, but we can't change that now for backwards compatibility
	  reasons).

2006-09-27  Tim-Philipp Müller  <tim at centricular dot net>

	* README:
	  Update (no more glib-1.2).

2006-09-13  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/.cvsignore:
	* tests/Makefile.am:
	* tests/tcp_test.c:
	  Add unit test for bug #305854.

	* examples/sdr.c: (main):
	  Add some refs/unrefs to test the derived nature of GMcastSocket and
	  the run-time 'type checks'.

2006-09-13  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.h:
	* src/inetaddr.c: (gnet_inetaddr_new_async):
	* src/tcp.c: (gnet_tcp_socket_connect_async),
	(gnet_tcp_socket_connect_inetaddr_cb):
	  Move more private and only locally used structs into the
	  appropriate .c files; make some internal functions static;
	  use proper AsyncID types for such IDs; don't leak mutex. 

2006-09-13  Tim-Philipp Müller  <tim at centricular dot net>

	* AUTHORS:
	* MAINTAINERS:
	* Makefile.am:
	  Add maintainers file, update/utf8-ise/reformat authors file.

2006-09-13  Tim-Philipp Müller  <tim at centricular dot net>

	* src/tcp.c: (gnet_tcp_socket_connect_async_cancel):
	  We used gnet_inetaddr_new_list_async(), so we also need to call
	  gnet_inetaddr_new_list_async_cancel() to cancel it, and not
	  gnet_inetaddr_new_async_cancel(). Would cause invalid memory access,
	  double frees and other weird things when cancelling an asynchronous
	  TCP connect before the dns lookup has finished. Fixes #305854.

	* src/gnet-private.h: