@@ -1,3 +1,14 @@
+2006-10-30  Tim-Philipp Müller  <tim at centricular dot net>
+
+	Based on patch by: Samuel Cormier-Iijima  <sciyoshi@gmail.com>
+
+	* NEWS:
+	* doc/gnet-sections.txt:
+	* src/conn-http.c: (gnet_conn_http_set_uri_internal),
+	(gnet_conn_http_set_uri), (gnet_conn_http_set_escaped_uri):
+	* src/conn-http.h:
+	  API: added gnet_conn_http_set_escaped_uri().
+
 2006-10-07  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/base64.c: (gnet_base64_encode), (gnet_base64_decode):
